upgrade for users

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "kr-azurebackend_db_mssql":"Server=tcp:server-kr-azure-dev.database.windows.net,1433;Initial Catalog=sqldb-azure-dev;Persist Security Info=False;User ID=kradwan;Password=test;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
